renders filled rectangle on the canvas

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
 	</head>
 	<body>
 		<div id="background">
-			<div id="canvas"></div>
+			<canvas width="700px" height="700px" id="canvas"></canvas>
 			<div id="debug"></div>
 		</div>
+		<script src="./bundle.js"></script>
 	</body>
 </html>
